apps/ingress-gateway/overlays/staging/ingress-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-https
  namespace: ingress-gateway
spec:
  parentRefs:
    - name: ingress-gateway
      sectionName: https
  hostnames:
    - "*.staging.kibaship.app"
