apps/ingress-gateway/overlays/staging/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress
  namespace: ingress-gateway
spec:
  parentRefs:
    - name: ingress-gateway
      sectionName: http
  hostnames:
    - "*.staging.kibaship.app"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
